# discord-webhook-lib

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  message.rs
