[package]
name = "discord-webhook-lib"
description = "Discord Webhook library - VERY Simple lib for sending webhooks from your codebase, without fuss, no fluff"
version = "0.1.3"
edition = "2021"
authors = ["james@koonts.net"]
license = "MIT"
repository = "https://github.com/helloimalemur/discord-webhook-lib"
keywords = ["discord", "webhook", "lib", "discord-webhook-lib"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"]}
serde_json = "1.0.95"
serde_with = "3.6.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
