[package]
name = "discord-webhook-lib"
description = "Discord Webhook library - VERY Simple lib for sending webhooks from your codebase, without fuss, no fluff"
version = "0.1.7"
edition = "2021"
authors = ["james@koonts.net"]
license = "MIT"
repository = "https://github.com/helloimalemur/discord-webhook-lib"
keywords = ["discord", "webhook", "lib", "discord-webhook-lib"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"]}
serde_json = "1.0.115"
serde_with = "3.7.0"
reqwest = { version = "0.12.3", features = ["json"] }
tokio = { version = "1.37.0", features = ["full"] }
anyhow = "1.0.81"
