[package]
name = "discord-webhook-lib"
description = "Discord Webhook library - VERY Simple lib for sending webhooks from your codebase, without fuss, no fluff"
version = "0.2.0"
edition = "2021"
authors = ["james@koonts.net"]
license = "MIT"
repository = "https://github.com/helloimalemur/discord-webhook-lib"
keywords = ["discord", "webhook", "lib", "discord-webhook-lib"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.3", features = ["json", "multipart"] }
tokio = { version = "1.37.0", features = ["full"] }
anyhow = "1.0.81"
